@startuml

title
    Application layering
end title

left to right direction

package controller {
    class FooCommand
    note right
        Command line invocation
        implementation
    end note
}

package core {
    interface ConversionService
    FooCommand -l-> ConversionService

    package domain {
        class ConversionInteractor
        note bottom
            Use Case implementations
        end note
        ConversionService <|.. ConversionInteractor

        class DomainClass
        ConversionInteractor ..> DomainClass
    }

    interface BomReader
    ConversionInteractor -> BomReader

    interface BomWriter
    ConversionInteractor -> BomWriter

    interface KnowledgeBase
    ConversionInteractor -> KnowledgeBase

    BomReader -[hidden]- BomWriter
    BomWriter -[hidden]- KnowledgeBase
}

package persistence {
    class XyzReader
    BomReader <|-- XyzReader

    class XyzWriter
    BomWriter <|-- XyzWriter

    class XyzKnowledgeBase
    KnowledgeBase <|-- XyzKnowledgeBase
}

@enduml
